[package]
name = "celemod"
version = "0.1.8"
edition = "2021"

[lib]
name = "celemod_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "sync"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
game-scanner = { git = "https://github.com/EqualGames/game-scanner", branch = "dependabot/cargo/sysinfo-0.28.2" }
lazy_static = "1"
anyhow = "1"
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["json", "gzip", "tls"] }
strip_bom = "1"
open = "5"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "consoleapi", "winuser"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
